--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ width: 300px;
      	<div class="input-group">
      		<input type="text" required >
      		<div class="underline"></div>
-     		<label>NAME</label>
+     		<label>Name</label>
      	</div><br><br><br>
      	<div class="input-group">
      		<input type="text" required>
